--- a/FullStack/package.json
+++ b/FullStack/package.json
@@ -16,10 +16,15 @@
     "babel-watch": "^2.0.7"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "nunjucks": "^3.0.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sqlite": "^2.9.0"
   }
 }
